model-form/* components and other minor changes
model-form/form component accepts a model and builds a form based on
common model-attribute->form-field mapping.

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -1,14 +1,4 @@
-@import "bootstrap";
-
 @charset "utf-8";
+@import 'ember-paper';
 
-
-.form-control {
-	@extend .input-sm;
-}
-
-.btn {
-	@extend .btn-sm;
-}
-
-
+body, body div.app, body div.app > div { height: 100%; }
