--- a/travelsFront/app/templates/petition-form.hbs
+++ b/travelsFront/app/templates/petition-form.hbs
@@ -1,173 +1,3 @@
-<div class="panel panel-default">	
-
-	<div class = "panel-heading" role="tab" id="headingPetition">
-		<h4 class = "panel-title"><a role="button" data-toggle="collapse"
-                 data-parent="#accordion" href="#petitionForm"
-                 aria-expanded="true" aria-controls="petitionForm">Στοιχεία Αίτησης Ταξιδιού</a></h4>
-	</div>
-
-	<div role="tabpanel" class="panel-collapse collapse in"
-         id="petitionForm" aria-labelledby="headingPetition">
-	<div class = "panel-body">
-		<div class="profileForm form-group">
-			<label for="movementCategory" class="col-sm-2 control-label">Κατηγορία Μετακίνησης</label>
-			<div class="col-sm-4">
-				{{input type="text" name="movementCategory" class="form-control" value=model.movementCategory.name readonly="readonly"}}	
-			</div>
-
-			<label for="countryCategory" class="col-sm-2 control-label">Κατηγορία Χώρας</label>
-			<div class="col-sm-4">
-				{{input type="text" name="countryCategory" class="form-control" value=model.arrivalPoint.country.category.name  readonly="readonly"}}	
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="project" class="col-sm-2 control-label">Έργο</label>
-			<div class="col-sm-4">
-				<select onchange={{action "setProject" value="target.value"}} class="form-control" autofocus="autofocus">
-					<option value=""></option>
-
-					{{#each projects as |projectChoice|}}
-						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
-					{{/each}}
-				</select>	
-			</div>
-			{{#if (v-get model 'project' 'isInvalid') }}
-				<font color="red">{{v-get model 'project' 'message'}}</font>
-			{{/if}} 
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="taskStartDate" class="col-sm-2 control-label">Έναρξη Εργασιών</label>
-			<div class="col-sm-4">	
-				{{input value=model.taskStartDate type="datetime-local" class="form-control" }}
-			</div>
-			<!-- <div class="col-sm-4">	
-				{{bs-datetimepicker date='model.taskStartDate' format="DD/MM/YYYY-hh:mm a"}}
-			</div> --> 
-
-			<label for="taskEndDate" class="col-sm-2 control-label">Λήξη Εργασιών</label>
-			<div class="col-sm-4">	
-				{{input value=model.taskEndDate type="datetime-local" class="form-control" }}
-			</div>
-			<!-- <div class="col-sm-4">	
-				{{bs-datetimepicker date='model.taskEndDate' format="DD/MM/YYYY-hh:mm a"}}
-			</div> -->
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="depart_date" class="col-sm-2 control-label">Ημ/νία Αναχώρησης</label>
-			<div class="col-sm-4">	
-				{{input value=model.depart_date type="datetime-local" class="form-control"  }}
-			</div>
-			<!-- <div class="col-sm-4">
-				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div> -->
-
-			<label for="return_date" class="col-sm-2 control-label">Ημ/νία Επιστροφής</label>
-			<div class="col-sm-4">	
-				{{input value=model.return_date type="datetime-local" class="form-control" }}
-			</div>
-			<!-- <div class="col-sm-4">
-				{{bs-datetimepicker date="" format="DD/MM/YYYY-hh:mm a" }}
-			</div> -->
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="departurePoint" class="col-sm-2 control-label">Αναχώρηση</label>
-			<div class="col-sm-4">
-				<select onchange={{action "setDeparturePoint" value="target.value"}} class="form-control" id="test">
-
-					{{#each departurePoints as |departurePointChoice|}}
-						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
-					{{/each}}
-				</select>	
-			</div>
-
-			<label for="arrivalPoint" class="col-sm-2 control-label">Προορισμός</label>
-			<!-- <div class="arrival-point col-sm-4"> -->	
-			<div class="col-sm-4">	
-				<select onchange={{action "setCountry" value="target.value"}} class="form-control">
-					<option value="">Επιλέξτε χώρα προορισμού</option>
-
-					{{#each countries as |countryChoice|}}
-						<option value={{countryChoice.id}} selected={{eq countryChoice.id model.arrivalPoint.country.id}}>{{countryChoice.name}}</option>
-					{{/each}}
-				</select>
-			</div>
-
-			<div class="col-sm-4 col-sm-push-8">	
-				<select onchange={{action "setArrivalPoint" value="target.value"}} class="form-control" disabled={{not country_selected}}>
-					<option value=""></option>
-
-					{{#each arrivalPoints as |arrivalPointChoice|}}
-						<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
-					{{/each}}
-				</select>
-			</div>		
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="transportation" class="col-sm-2 control-label">Μέσο Μετακίνησης</label>
-			<div class="col-sm-4">	
-				<select onchange={{action "setTransportation" value="target.value"}} class="form-control"> 
-					<option value=""></option>
-
-					{{#each transportations as |transportationChoice|}}
-						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
-					{{/each}}
-				</select>
-			</div>
-
-			<label for="additional_expenses_initial" class="col-sm-2 control-label" style="font-weight:normal;">Λοιπά Έξοδα</label>
-			<div class="col-sm-4">	
-   				{{input value=model.additional_expenses_initial type="number" class="form-control"}}	
-			</div>
-		</div> 
-
-		<div class="profileForm form-group">
-			<label for="reason" class="col-sm-2 control-label">Αιτιολογία Μετακίνησης</label>
-			<div class="col-sm-4">	
-				{{#character-limit max=100}}
-					{{textarea value=model.reason type="textarea" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-
-			<label for="additional_expenses_initial_description" class="col-sm-2 control-label" style="font-weight:normal;">Περιγραφή Λοιπών Εξόδων</label>
-			<div class="col-sm-4">	
-				{{#character-limit max=100}}
-					{{textarea value=model.additional_expenses_initial_description type="textarea" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="recTransport" class="col-sm-2 control-label" style="font-weight:normal;">Προτεινόμενα Μέσα Μετακίνησης</label>
-			<div class="col-sm-4">	
-				{{#character-limit max=100}}
-					{{textarea value=model.recTransport type="textarea" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-
-			<label for="recAccomondation" class="col-sm-2 control-label" style="font-weight:normal;">Προτεινόμενο Κατάλυμα</label>
-			<div class="col-sm-4">	
-				{{#character-limit max=100}}
-					{{textarea value=model.recAccomondation type="textarea" cols="75" class="form-control"}}
-				{{/character-limit}}
-			</div>
-
-			
-		</div>	
-
-		<div class="profileForm form-group">
-			<label for="recCostParticipation" class="col-sm-2 col-sm-offset-6 control-label" style="font-weight:normal;">Κόστος Συμμετοχής</label>
-			<div class="col-sm-4">	
-					{{input value=model.recCostParticipation type="number" class="form-control"}}
-			</div>
-		</div>		
-	</div>
-	</div>
-</div>	
-
-
-
+<div class="container">
+    {{model-form-for model}}
+</div>
