--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,129 +1,4 @@
-<div class="container">
-
-	<form class="form-horizontal col-md-10">
-
-		<div class="profileForm form-group">
-			<label for="email" class="col-sm-2 control-label">Email</label>
-			<div class="col-sm-4">
-				{{input value=model.email type="text" class="form-control" autofocus="autofocus"}}
-			</div>	
-			{{#if (v-get model 'email' 'isInvalid') }}
-				<font color="red">{{v-get model 'email' 'message'}}</font>
-			{{/if}}
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
-			<div class="col-sm-4"> 	
-				{{input value=model.first_name type="text" class="form-control"}}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
-			<div class="col-sm-4"> 	
-				{{input value=model.last_name type="text" class="form-control"}}
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="iban" class="col-sm-2 control-label">IBAN</label>
-			<div class="col-sm-4"> 
-				{{input value=model.iban type="text" class="form-control"}}
-			</div>	
-			{{#if (v-get model 'iban' 'isInvalid') }}
-				<font color="red">{{v-get model 'iban' 'message'}}</font>
-			{{/if}} 
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="specialty" class="col-sm-2 control-label">Ειδικότητα</label>
-			<div class="col-sm-4"> 	
-
-				<select onchange={{action "setSpecialty" value="target.value"}} class="form-control">
-					<option value=""></option>
-					{{#each specialties as |specialtyChoice|}}
-						<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
-
-					{{/each}}
-				</select>
-			</div> 
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
-			<div class="col-sm-4"> 
-
-				<select onchange={{action "setKind" value="target.value"}} class="form-control">
-					<option value=""></option>
-					{{#each kinds as |kindChoice|}}
-						<option value={{kindChoice.id}} selected={{eq kindChoice.id model.kind.id}}>{{kindChoice.name}}</option>
-
-					{{/each}}
-				</select>
-			</div>
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
-			<div class="col-sm-4">
-				{{input value=model.taxRegNum type="text" class="form-control"}}
-			</div>	
-			{{#if (v-get model 'taxRegNum' 'isInvalid') }}
-				<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
-			{{/if}}
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
-			<div class="col-sm-4"> 	
-				<select onchange={{action "setTaxOffice" value="target.value"}} class="form-control">
-					<option value=""></option>
-
-					{{#each tax-offices  as |taxOfficeChoice|}}
-
-						<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
-
-					{{/each}}
-				</select>
-			</div>	
-		</div>
-
-		<div class="profileForm form-group">
-			<label for="category" class="col-sm-2 control-label">Κατηγορία Χρήστη</label>
-			<div class="col-sm-4"> 	
-				<select onchange={{action "setCategory" value="target.value"}} class="form-control">
-					<option value=""></option>
-
-					{{#each categories  as |categoryChoice|}}
-
-						<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.category.id}}>{{categoryChoice.name}}</option>
-
-					{{/each}}
-				</select>
-			</div>	
-		</div>
-
-		<div class="col-sm-offset-2">
-			<button type="submit" class="btn btn-primary" {{action "profileUpdate"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση</button>
-		</div>
-
-		<!-- Message Modal-->
-		<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header" id="styleModal">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel"><font>{{profileMessage}}</font></h4>
-					</div>
-				</div>
-			</div>
-		</div>
-	</form>
-
-</div>
-
-{{outlet}}
-
-
-
+{{ page-toolbar pageTitle="Profile" }}
+{{#paper-content classNames="md-padding"}}
+    {{ model-form/form model }}
+{{/paper-content}}
