--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,51 +1,4 @@
-<div class="container">
-	<form class="form-horizontal col-md-12" {{action "checkChanges" preventDefault=false}} role="form">
-	<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true"> -->
-		{{partial 'profile-form'}}
-
-		{{partial 'petition-form'}}
-
-		<button type="submit" class="btn btn-primary" {{action "petitionSave"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση Στοιχείων</button>
-		<button type="submit" class="btn btn-primary" id="submit" {{action "petitionSubmit"}} disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
-
-		<div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header" id="styleModal">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel"><font>{{petitionMessage}}</font></h4>
-					</div>
-				</div>
-			</div>
-		</div><!-- end of message modal-->
-
-		<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Επιβεβαίωση</h4>
-					</div>
-					<div class="modal-body">
-						Είστε σίγουροι ότι θέλετε να μεταβείτε σε άλλη σελίδα; Σε αυτή την περίπτωση οι αλλαγές σας θα χαθούν.
-						
-					</div>
-
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" id="stay" data-dismiss="modal">Παραμονή</button>
-						<button type="submit" class="btn btn-primary" id="leave" data-dismiss="modal">Μετάβαση</button>
-					</div>
-				</div>
-			</div>
-		</div> <!--end of confirm Modal-->
-		<!-- </div> end of accordion-->
-	</form><br>
-</div>
-{{outlet}}
-
-
-
-
-
-
-
+{{ page-toolbar pageTitle="Create a petition" }}
+{{#paper-content classNames="md-padding"}}
+    {{ model-form/form model }}
+{{/paper-content}}
