--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -1,26 +1,8 @@
-<div class="container">
+{{ page-toolbar pageTitle="Login" }}
+{{#paper-content classNames="md-padding"}}
 	<form class="form-horizontal col-md-10" role="form" {{action "authenticate" on="submit"}}>
-
-		<div class="loginForm form-group">
-			<label for="identification" class="col-sm-2 control-label">Username</label>
-			<div class="col-sm-4"> 	
-				{{input id="identification" class="form-control" value=identification type="text" autofocus="autofocus"}}
-			</div>
-		</div>
-
-		<div class="loginForm form-group">
-			<label for="password" class="col-sm-2 control-label">Password</label>
-			<div class="col-sm-4">   	
-				{{input id="password" class="form-control" value=password type="password"}}
-			</div> 
-		</div>
-
-		<div class="col-sm-offset-2">	
-			<button type="submit" class="btn btn-primary">Login</button>
-		</div>
-
+        {{paper-input onChange=(action (mut identification)) label="Username"}}
+        {{paper-input type="password" onChange=(action (mut password)) label="Password"}}
+        {{#paper-button onClick=(action "authenticate")}}Login{{/paper-button}}
 	</form>
-</div>	
-
-
-{{outlet}}
+{{/paper-content}}
