Display login info

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -2,3 +2,14 @@
 @import 'ember-paper';
 
 body, body div.app, body div.app > div { height: 100%; }
+
+md-content.login-info {
+  background-color: color($background, '200');
+  padding: 16px;
+  border-bottom: 1px solid color($background, '400');
+  margin-bottom: 8px;
+  md-content.user-label {
+    padding: 20px 16px 20px 0;
+    background-color: transparent;
+  }
+}
