--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -3,6 +3,6 @@
 	<form class="form-horizontal col-md-10" role="form" {{action "authenticate" on="submit"}}>
         {{paper-input onChange=(action (mut identification)) label="Username"}}
         {{paper-input type="password" onChange=(action (mut password)) label="Password"}}
-        {{#paper-button onClick=(action "authenticate")}}Login{{/paper-button}}
+        {{#paper-button type="submit" onClick=(action "authenticate")}}Login{{/paper-button}}
 	</form>
 {{/paper-content}}
