--- a/travelsFront/app/templates/components/model-form/fields.hbs
+++ b/travelsFront/app/templates/components/model-form/fields.hbs
@@ -1,6 +1,14 @@
 {{#if hasBlock}}
 {{else}}
-    {{#each fields as |field|}}
-        {{model-form/field field=field object=object isTouched=isTouched flex=field.layout.flex}}
-    {{/each}}
+    {{#if fieldsets}}
+        {{#each fieldsets as |fieldset| }}
+            {{model-form/set object=object fields=fieldset.fields label=fieldset.label isTouched=isTouched flex=fieldset.flexLayout tagName='' isTouched=isTouched}}
+        {{/each}}
+    {{else}}
+        {{#paper-content classNames="layout-row layout-wrap"}}
+            {{#each fields as |field|}}
+                {{model-form/field field=field object=object isTouched=isTouched flex=field.layout.flex}}
+            {{/each}}
+        {{/paper-content}}
+    {{/if}}
 {{/if}}
