Textarea support and improved layout mechanism

--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -33,6 +33,9 @@
     step=step
     tabindex=tabindex
     title=title
+    textarea=textarea
+    rows=rows
+    columns=columns
 }}
 {{else}}
 {{# component
