Simplify fields template
always use fieldsets property to render fields. If no fieldsets are set,
render a fieldset block with no label

--- a/travelsFront/app/templates/components/model-form/set.hbs
+++ b/travelsFront/app/templates/components/model-form/set.hbs
@@ -1,7 +1,9 @@
 {{#paper-content classNames="layout-column model-form-fieldset" flex=flex}}
-    {{#paper-content flex=100}}
-        <h2>{{ label }}</h2>
-    {{/paper-content}}
+    {{#if label}}
+        {{#paper-content flex=100}}
+            <h2>{{ label }}</h2>
+        {{/paper-content}}
+    {{/if}}
     {{#paper-content classNames="layout-row layout-wrap"}}
         {{#each fields as |field|}}
             {{model-form/field field=field object=object isTouched=isTouched flex=field.layout.flex}}
