Pass `cache` attribute to select component

--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -47,6 +47,7 @@
     placeholder=placeholder
     isTouched=isTouched
     errors=errors
+    cache=cache
     
     getItems=getItems
     itemLabelCallback=itemLabelCallback
