--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -101,3 +101,11 @@
         </div>
     {{/if}}
 {{/unless}}
+
+{{#if canShowHint }}
+    <div class="md-input-hint">
+        <div class="message">
+            {{ hint }}
+        </div>
+    </div>
+{{/if}}
