--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -94,7 +94,7 @@
           {{#each errors as |error index|}}
             <div
               id="error-{{index}}"
-              class="paper-input-error ng-enter ng-enter-active" ng-message>
+              class="md-input-error">
               {{error.message}}
             </div>
           {{/each}}
