--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -8,6 +8,7 @@
     placeholder=placeholder
     errors=errors
     isTouched=isTouched
+    type=type
     
     icon=icon
     accesskey=accesskey
