--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -1,51 +1,4 @@
-<div class="container">
-	<form class="form-horizontal col-md-10"  {{action "signup" on="submit"}}>
-
-		<div class="signupForm form-group">
-			<label for="username" class="col-sm-2 control-label">Username</label>
-			<div class="col-sm-4">  	
-				{{input value=username type="text" key-up='clearUserErrorLabels' class="form-control" autofocus="autofocus"}}
-			</div>	
-			{{#if (v-get model 'username' 'isInvalid') }}
-				<font color="red">{{v-get model 'username' 'message'}}</font>
-
-			{{/if}}
-			<font color="red">{{usernameExists}}</font>
-		</div>
-
-		<div class="signupForm form-group">
-			<label for="password" class="col-sm-2 control-label">Password</label>
-			<div class="col-sm-4">	
-				{{input value=password type="password" class="form-control"}}
-			</div>	
-			{{#if (v-get model 'password' 'isInvalid') }}
-				<font color="red">{{v-get model 'password' 'message'}}</font>
-			{{/if}}
-		</div> 
-
-		<div class="signupForm form-group">
-			<label for="email" class="col-sm-2 control-label">Email</label>
-			<div class="col-sm-4">	
-				{{input value=email type="text" key-up='clearEmailErrorLabels' class="form-control"}}
-			</div>	
-			{{#if (v-get model 'email' 'isInvalid') }}
-				<font color="red">{{v-get model 'email' 'message'}}</font>
-			{{/if}}
-			<font color="red">{{emailProblems}}</font>
-		</div>
-
-		<div class="col-sm-offset-2">
-			<button type="submit" class="btn btn-primary">Sign Up</button>
-		</div>
-
-		<div class="signupForm">
-			{{#if (v-get model 'isValid') }}
-				<font color="green">{{message}}</font>
-			{{/if}}
-
-		</div>
-	</form>
-
-</div>
-
-{{outlet}}
+{{ page-toolbar pageTitle="Create an account" }}
+{{#paper-content classNames="md-padding"}}
+    {{ model-form/form model onSuccess='onSuccess'}}
+{{/paper-content}}
