Change button from SUBMIT to SAVE

--- a/travelsFront/app/templates/components/model-form/controls.hbs
+++ b/travelsFront/app/templates/components/model-form/controls.hbs
@@ -1,2 +1,2 @@
-{{#paper-button onClick=submit raised=true}}SUBMIT{{/paper-button}}
+{{#paper-button onClick=submit raised=true}}SAVE{{/paper-button}}
 {{#paper-button onClick=reset raised=true}}RESET{{/paper-button}}
