--- a/travelsFront/app/templates/components/model-form/fields.hbs
+++ b/travelsFront/app/templates/components/model-form/fields.hbs
@@ -1,6 +1,13 @@
 {{#if hasBlock}}
 {{else}}
     {{#each fieldsets as |fieldset| }}
-        {{model-form/set object=object fields=fieldset.fields label=fieldset.label isTouched=isTouched flex=fieldset.flexLayout tagName='' isTouched=isTouched}}
+        {{model-form/set 
+            tagName='' 
+            fields=fieldset.fields 
+            object=object 
+            label=fieldset.label 
+            isTouched=isTouched 
+            layout=fieldset.layout
+        }}
     {{/each}}
 {{/if}}
