--- a/travelsFront/app/templates/signup.hbs
+++ b/travelsFront/app/templates/signup.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle="Create an account" }}
-{{#paper-content classNames="md-padding"}}
+{{#paper-content}}
     {{ model-form/form model onSuccess='onSuccess'}}
 {{/paper-content}}
