--- a/travelsFront/app/templates/components/model-form/form.hbs
+++ b/travelsFront/app/templates/components/model-form/form.hbs
@@ -10,6 +10,7 @@
     {{model-form/controls
         object=model
         submit=(action 'submit')
+        submitLabel=submitLabel
         reset=(action 'reset')
         hideReset=hideReset
         inProgress=inProgress
