--- a/travelsFront/app/templates/login.hbs
+++ b/travelsFront/app/templates/login.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle="Login" }}
 {{#paper-content}}
-    {{model-form/form model ui='login' submit=(action 'authenticate') submitError=(mut submitError) hideReset=true}}
+    {{model-form/form model ui='login' submit=(action 'authenticate') submitError=(mut submitError) hideReset=true submitLabel="Login"}}
 {{/paper-content}}
