Update petition model to use the __ui__ instead of __form__

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle="Create a petition" }}
 {{#paper-content classNames="md-padding"}}
-    {{ model-form/form model }}
+    {{ model-form/form model ui="user"}}
 {{/paper-content}}
