Support for ember-paper passThru attrs

--- a/travelsFront/app/templates/components/model-form/field.hbs
+++ b/travelsFront/app/templates/components/model-form/field.hbs
@@ -10,6 +10,8 @@
     isTouched=isTouched
     type=fieldAttrs.type
     
+    passThru=passThruAttrs
+
     icon=fieldAttrs.icon
     accesskey=fieldAttrs.accesskey
     autocomplete=fieldAttrs.autocomplete
@@ -52,6 +54,8 @@
     
     getItems=getItems
     itemLabelCallback=itemLabelCallback
+
+    passThru=passThruAttrs
 
     icon=fieldAttrs.icon
     accesskey=fieldAttrs.accesskey
